--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "v4",
-  "description": "Personal Website V11",
+  "name": "resume",
+  "description": "Personal Website 1.0",
   "version": "1.0.0",
   "author": "Chandra Pratama <chandra.praputraa@gmail.com>",
   "repository": {
