--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
   "root": true,
-  "extends": "@upstatement/eslint-config/react"
+  "extends": ["@upstatement/eslint-config/react","eslint:recommended"]
+  
 }
